Fix padding issues of project headers on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -10,7 +10,7 @@
   --border-radius-round: 10rem;
 
   --content-max-width: 1920px;
-  --content-min-width: 480px;
+  --content-min-width: 400px;
 
   --scrollbar-width: 0.5rem;
 
